[gd_scene load_steps=4 format=3 uid="uid://dg2x1m8wubhof"]

[ext_resource type="Script" uid="uid://s23y1606lrj8" path="res://components/world_info_view/libraries_viewer.gd" id="1_lyvui"]
[ext_resource type="PackedScene" uid="uid://i4yy771itly2" path="res://components/world_info_view/library_details_container.tscn" id="2_q4bgv"]
[ext_resource type="PackedScene" uid="uid://lg71e63pa16b" path="res://components/world_info_view/vulnerability_container.tscn" id="2_vbitr"]

[node name="LibrariesViewer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lyvui")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LibraryTree" type="Tree" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="LibraryDetailsContainer" parent="HBoxContainer" instance=ExtResource("2_q4bgv")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VulnerabilityContainer" parent="HBoxContainer" instance=ExtResource("2_vbitr")]
unique_name_in_owner = true
layout_mode = 2
